--- a/VEL205M-SoupRobot.html
+++ b/VEL205M-SoupRobot.html
@@ -34,14 +34,14 @@
 									</header>
 
 									<h3>Requirements</h3>
-									<p>The requirements that the robot had to meet were that it had to be able to feet the professor with a spoon, it had to be able to sense if the soup was to hot and see what kind of soup it was.</p> 
+									<p>The requirements that the robot had to meet were that it had to be able to feet the professor with a spoon, and it had to be able to sense if the soup was too hot and see what kind of soup it was.</p> 
                                     <p>
-                                    The robot was designed in Solidworks and manufactured out of acrylic plastic with a lazercutter and out of pla plastic with a 3D Printer.
+                                    The robot was designed in Solidworks and manufactured out of acrylic plastic with a laser cutter and out of PLA plastic with a 3D Printer.
                                     </p>
                                     <p>
-                                    The robot has two steppermotors and one servo motor which are controlled with an Arduino Uno and a motordriver. It also has an light sensor which was used to determine what kind of soup it was and an heat sensor to find the tempeture.
+                                    The robot has two stepper motors and one servo motor which are controlled with an Arduino Uno and a motor driver. It also has a light sensor which was used to determine what kind of soup it was and a heat sensor to find the temperature.
                                     </p>
-                                    <p>The video here below is the result.</p>
+                                    <p>The video below is the result.</p>
                                     <video width="1000" height="600" controls>
                                     <source src="images/soup2.mp4" type="video/mp4">
                                     <source src="movie.ogg" type="video/ogg">
