--- a/VEL205M-TyrsHand.html
+++ b/VEL205M-TyrsHand.html
@@ -42,7 +42,7 @@
                                         <img src="images/hond8.jpg" width="300" height="500">
                                     </figure>
                                     <p>
-                                     It was designed in Solidworks and manufactured with a 3D-printer using PLA and TPU Plastic. The fingers are made out of TPU plastic which is rubber like thus the fingers are able to bend and we are able to control the how much the finger bends and the stiffness of them. 
+                                     It was designed in Solidworks and manufactured with a 3D printer using PLA and TPU Plastic. The fingers are made out of TPU plastic which is rubber-like thus the fingers can bend and we can control how much the finger bends and their stiffness. 
                                     </p>
 
                                     <figure>
@@ -51,15 +51,17 @@
                                         <img src="images/hond3.jpg" width="00" height="500">
                                     </figure>
                                     <p>
-                                    There is one big servo motor which operates all fingers and thumb. It is able to do this because there is a fishing line that is attached to the tip of the fingers and thumb and to the motor. Thus able to control the fingers much like a puppet on strings.
+                                    There is one big servo motor that operates all fingers and thumb. It can do this because there is a fishing line attached to the tip of the fingers and thumb and to the motor. Thus able to control the fingers much like a puppet on strings.
                                     </p>
                                     <figure>
                                         <img src="images/hond11.jpg" width="300" height="500">
                                     </figure>
                                     <p>
-                                    The hand is able to lift simple things like a mug or hold on a door knob but because the motor pulls on all fingers at ones it is not able to do dexterous movements.
+                                    The hand can lift simple things like a mug or hold on a door knob but because the motor pulls on all fingers at once it is not able to do dexterous movements.
                                     </p>
-                                    <p>But it is able to hold on a soda can while it is being opened :).</p>
+                                    <p>
+                                        But it can hold onto a soda can while it is being opened :)
+                                    </p>
                                     <video width="1000" height="600" controls>
                                     <source src="images/hond1.mp4" type="video/mp4">
                                     <source src="movie.ogg" type="video/ogg">
