--- a/Vel608G-Project2.html
+++ b/Vel608G-Project2.html
@@ -32,37 +32,41 @@
 									<header class="main">
 										<h1>Computer-aided Cutting</h1>
                                     </header>
-									<p>This project is divided into two parts. Using the vinyl cutter and lazer cutter.</p>
+									<p>This project is divided into two parts. Using the vinyl cutter and laser cutter.</p>
                                     <h2>Vinyl</h2>
-                                    <p>I found a picture on google of a Ferrari Formula 1 car that i put into <a href="https://inkscape.org/">inkscape</a>. By using Path>Bitmap Trace and changing the threshold to 0.600 i changed the picture to black.</p>
+                                    <p>I found a picture on Google of a Ferrari Formula 1 car that I put into <a href="https://inkscape.org/">Inkscape</a>. By using Path>Bitmap Trace and changing the threshold to 0.600 I changed the picture to black.</p>
                                     <span class="image main"><img src="images/ferrari.png" alt="" /></span>
-                                    <p>Then I moved the picture to a computer that was connected to the vinyl cutter and from there I changed the picture to an pdf.file. My teacher, Hafliði helped me with setting up the vinyl cutter by adjusting and tightening the wheels so that the vinyl would stay still. Finally everything was ready and it was time to cut. This was the final result.</p>
+                                    <p>Then I moved the picture to a computer that was connected to the vinyl cutter and from there I changed the picture to a pdf file. My teacher, Hafliði helped me with setting up the vinyl cutter by adjusting and tightening the wheels so that the vinyl would stay still. Finally, everything was ready and it was time to cut. This was the final result.</p>
                                     <span class="image main"><img src="images/vinyl.jpg" alt="" /></span>
                                     <h2>Kerf test</h2>
                                     <p>To determine how much kerf the laser cutter should have, we had to test it. I did the test with Aron Beck and Tómas Ingi. In order to determine the kerf, we cut ten boxes and measured the length of the boxes and then the hole in the plastic from which the boxes were cut.</p>
-                                    <p>The length of the hole was 9.9mm and the combined length of the boxes was 9.69mm. Then we got that our system is (9.9-9.69)/11=0.019mm but I round it to 0.020mm. </p>
+                                    <p>The length of the hole was 9.9mm and the combined length of the boxes was 9.69mm. Then we got that our system is (9.9-9.69)/11=0.19mm but I rounded it to 0.20mm. </p>
                                     <span class="image main"><img src="images/kerf.jpg" alt="" /></span>
                                     <h2>CAD design</h2>
-                                    <p>The program i chose to use was <a href="https://www.solidworks.com/">Solidworks</a>.
-                                    I decided to lazer cut an office drawer for my small tools. I started by measuring the longest tool, which is my dial gauge, and used that as a basis for how big the drawer should be. I ended up making it 250mm long, 100mm wide and 50mm high and then offset all sides with the kerf, 0.020mm.</p>
+                                    <p>
+                                    The program I chose to use was <a href="https://www.solidworks.com/">Solidworks</a>.
+                                    I decided to laser cut an office drawer for my small tools. I started by measuring the longest tool, which is my dial gauge, and used that as a basis for how big the drawer should be. I ended up making it 250mm long, 100mm wide, and 50mm high and then offset all sides with the kerf, 0.20mm.
+                                    </p>
                                     <span class="image main"><img src="images/assembly.png" alt="" /></span>
                                     <h2>
                                     Parametric Design
                                     </h2>
-                                    <p>To make an parametric design i used design table in solidworks.</p>
+                                    <p>To make a parametric design I used a design table in SolidWorks.</p>
                                     <iframe width="420" height="315" src="https://www.youtube.com/embed/YV5BSSArjjU"> </iframe>
-                                    <p>I started with opening the tab configuration. There is one configuration in the file named “Default”.
-                                    From there i inserted a design table by going into Insert>Tables>Excel Design Table and used "auto-create". Then i could chose a dimension of a line in the sketch and make cuple of variants.</p>
+                                    <p>
+                                    I started by opening the tab configuration. There is one configuration in the file named “Default”.
+                                    From there I inserted a design table by going into Insert>Tables>Excel Design Table and using "auto-create". Then I could choose a dimension of a line in the sketch and make a couple of variants.
+                                    </p>
                                     <span class="image main"><img src="images/parameter.png" alt="" /></span>
-                                    <p>It is pretty useful to use the parametric design table if i wanted to increase the volume of the drawer but for now i will stick with the base design.</p>
+                                    <p>It is pretty useful to use the parametric design table if I want to increase the volume of the drawer but for now, I will stick with the base design.</p>
                                     <h2>Inkscape</h2>
-                                    <p>After I finished drawing all the sides of the drawer, I converted them to a .dxf file and transferred to inkscape. Then I changed the line thickness to 0.02 and changed the paper size to 500mmx500mm by going to File => Document Properties. </p>
+                                    <p>After I finished drawing all the sides of the drawer, I converted them to a .dxf file and transferred them to Inkscape. Then I changed the line thickness to 0.02 and changed the paper size to 500mmx500mm by going to File => Document Properties. </p>
                                     <span class="image main"><img src="images/inkscape1.png" alt="" /></span>
                                     <h2>Lazer cutting</h2>
-                                    <p>The material I chose was 3mmx500mmx500mm black acrylic plastic. In the lazer cutter itself I had to place the drawing from inkscape. So in the settings I set autofocus and 20% speed, 100% power, 100% frequency and 3mm thickness. After that I had to open the vacuum valve and press the play button.</p>
+                                    <p>The material I chose was 3mmx500mmx500mm black acrylic plastic. In the laser cutter itself, I had to place the drawing from Inkscape. So in the settings, I set autofocus and 20% speed, 100% power, 100% frequency, and 3mm thickness. After that, I had to open the vacuum valve and press the play button.</p>
                                     <span class="image main"><img src="images/lazerskerari.jpg" alt="" /></span>
                                     <h2>Post Production Mess</h2>
-                                    <p>After the laser cutting, I found that in some places I could not put the drawer together, mainly on the front and back. Then my teacher pointed out that the kerf was supposed to be 0.2mm not 0.02mm. Then i found out after looking in solidworks that i made a mistake wich fixed my original mistake with the kerf where i made it 0.2mm,the correct amound, but in some places it was still 0.02mm. I could have avoided this headache by experimenting with the laser cutter I have in mind for the future. But this was easily fixed by filing the sides down a bit.</p>
+                                    <p>After the laser cutting, I found that in some places I could not put the drawer together, mainly on the front and back. Then my teacher pointed out that the kerf was supposed to be 0.2mm, not 0.02mm. Then I found out after looking in Solidworks that I made a mistake which fixed my original mistake with the kerf where I made it 0.2mm, the correct amount, but in some places, it was still 0.02mm. I could have avoided this headache by experimenting with the laser cutter I have in mind for the future. But this was easily fixed by filing the sides down a bit.</p>
                                     <h2>Results</h2>
                                     <p>Here are the results.</p>
                                     <span class="image main"><img src="images/final_sk%C3%BAffa.jpg" alt="" /></span>
@@ -134,7 +138,7 @@
 											<span class="opener">Tölvustudd Framleiðsla - Vél608G</span>
 											<ul>
 												<li><a href="Vel608G-Project1.html">Project 1 - The Website</a></li>
-												<li><a href="Vel608G-Project2.html">Project 2 - Lazercutting</a></li>
+												<li><a href="Vel608G-Project2.html">Project 2 - Lasercutting</a></li>
 												<li><a href="Vel608G-Project3.html">Project 3 - 3D-printing and 3D-scan</a></li>
 												<li><a href="Vel608G-FinalProject.html">Final Project</a></li>
 											</ul>
