--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 										<header>
 											<h2>Hi my name is Jónas Þór Gunnarsson and welcome to my Portfolio</h2>
 										</header>
-										<p>I have a Bachelors Degree in Mechanical Engineering from the University of Iceland. During my studies i participated in the Formula Student team, Team Spark. This website is intented as a personal portfolio.</p>
+										<p>I have a Bachelors Degree in Mechanical Engineering from the University of Iceland. During my studies i participated in the Formula Student team, Team Spark. This website is intended as a personal portfolio.</p>
 										<ul class="actions">
 											<li><a href="CV.html" class="button big">CV</a></li>
 										</ul>
@@ -64,7 +64,7 @@
 											<span class="opener">Tölvustudd Framleiðsla - Vél608G</span>
 											<ul>
 												<li><a href="Vel608G-Project1.html">Project 1 - The Website</a></li>
-												<li><a href="Vel608G-Project2.html">Project 2 - Lazercutting</a></li>
+												<li><a href="Vel608G-Project2.html">Project 2 - Lasercutting</a></li>
 												<li><a href="Vel608G-Project3.html">Project 3 - 3D-printing and 3D-scan</a></li>
 												<li><a href="Vel608G-FinalProject.html">Final Project</a></li>
 											</ul>
