--- a/Vel608G-Project3.html
+++ b/Vel608G-Project3.html
@@ -32,25 +32,25 @@
 									<header class="main">
 										<h1>3D Printing og Scanning</h1>
 									</header>
-                                    <h2>Designing the spoonholder for my creatine</h2>
-                                    <p>I decided to 3D print somekind of a holder that would hold my scoop that i use for my creatine. The reason for that is that I was tired of having to rummage through my creatine can to get the scoop. The creatine powder would both get on my fingers and it was annoying to have to look for the spoon.</p>
+                                    <h2>Designing the spoon holder for my creatine</h2>
+                                    <p>I decided to 3D print some kind of holder that would hold the scoop that I use for my creatine. The reason for that is that I was tired of having to rummage through my creatine can to get the scoop. The creatine powder would both get on my fingers and it was annoying to have to look for the spoon.</p>
                                     <span class="image main"><img src="images/skeid1.jpg" alt="" /></span>
                                     <p>The requirements I set for myself were that the spoon has to be in the can, it has to be convenient to reach the scoop and it has to be easy to move the holder from can to can as the creatine can run out and if I buy another doll I have to I don't pour all the creatine powder into the bucket with the holder.</p>
                                     <p>The design I came up with was a holder that attaches to the wall of the housing with magnets. I started buying 2 12mmx3mm magnets.</p>
                                     <span class="image main"><img src="images/segull.jpg" alt="" /></span>
-                                    <p>Next I used Solidworks to design the holder. The design I came up with can be seen in the image below.</p>
+                                    <p>Next, I used Solidworks to design the holder. The design I came up with can be seen in the image below.</p>
                                     <span class="image main"><img src="images/haldari.png" alt="" /></span>
                                     <p>This design is very convenient as it is very easy to reach the scoop and because it is very small, the 3D printing takes no time.</p>
                                     <h2>Slicer</h2>
-                                    <p>The printer I decided to use was a <a href="https://www.prusa3d.com/product/original-prusa-i3-mk3s-kit-3/?gad=1&gclid=CjwKCAjwx_eiBhBGEiwA15gLN7zipv83uASDwISy243krnwipPUqqhxSE29Hb98CgY4jSPG8bjn-5RoCVX0QAvD_BwE">Prusa MK3</a>Prusa MK3. In order to print I had to download <a href="https://www.prusa3d.com/page/prusaslicer_424/">Prusaslicer</a> which converts .stl files into g-code that the printer can understand. Next I made a .stl file of the holder and transferred to Prusaslicer. There chose to have the item print on its back and have supports only from the build plate, i had to have somekind of support for the bridge that holds the scoop but i didn´t want any support to be in the slot for the magnet. I did a 30% Infill and supports on buildplate only and the base print settings, 0.15mm quality, and PLA filament. Then i sliced the part by clicking the slice button. Next, I took the sd card that was in the printer itself and inserted it into my computer. Then I was able to save the g-code from my computer to the sd card and then put it back into the printer. Overall it took 15 min. to print. </p>
+                                    <p>The printer I decided to use was a <a href="https://www.prusa3d.com/product/original-prusa-i3-mk3s-kit-3/?gad=1&gclid=CjwKCAjwx_eiBhBGEiwA15gLN7zipv83uASDwISy243krnwipPUqqhxSE29Hb98CgY4jSPG8bjn-5RoCVX0QAvD_BwE">Prusa MK3</a>Prusa MK3. In order to print I had to download <a href="https://www.prusa3d.com/page/prusaslicer_424/">Prusaslicer</a> which converts stl files into g-code that the printer can understand. Next, I made a .stl file of the holder and transferred it to Prusaslicer. They chose to have the item printed on its back and have supported only from the build plate, I had to have some kind of support for the bridge that holds the scoop but I didn´t want any support to be in the slot for the magnet. I did a 30% Infill and supports on the buildplate only and the base print settings, 0.15mm quality, and PLA filament. Then I sliced the part by clicking the slice button. Next, I took the SD card that was in the printer itself and inserted it into my computer. Then I was able to save the g-code from my computer to the SD card and then put it back into the printer. Overall it took 15 minutes to print. </p>
                                     <span class="image main"><img src="images/g-kodi.png" alt="" /></span>
-                                    <p>Þetta er niðurstaðan</p>
+                                    <p>This is the result</p>
                                     <span class="image main"><img src="images/haldari2.jpg" alt="" /></span>
                                     <span class="image main"><img src="images/haldari3.jpg" alt="" /></span>
                                     <span class="image main"><img src="images/haldari4.jpg" alt="" /></span>
                                     <a href="Verkefni3%20-%203dprentun.zip">Here</a> you can download the project files.
-                                    <h2>problems with 3D printing</h2>
-                                    <p>I had to print the creatine holder 3 times as the opening for the magnet was not big enough. It turns out that the plastic expands by 3% during the printing itself which messed with the tolerences. So I enlarged the opening by 0.5mm which was a good fit. But then I realized that the bow that holds the spoon itself is the exact width of the spoon so I made it bigger and longer.</p>
+                                    <h2>Problems with 3D printing</h2>
+                                    <p>I had to print the creatine holder 3 times as the opening for the magnet was not big enough. It turns out that the plastic expands by 3% during the printing itself which messed with the tolerances. So I enlarged the opening by 0.5mm which was a good fit. But then I realized that the bow that holds the spoon itself is the exact width of the spoon so I made it bigger and longer.</p>
                                     <h2>3D scanning</h2>
                                     <p>The object I decided to 3D scan is a dnd figurine I painted a long time ago.</p>
                                     <span class="image main"><img src="images/owlbear.jpg" alt="" /></span>
@@ -99,7 +99,7 @@
     <td>8 hours</td>
   </tr>
 </table>
-                                    <p>The project took alot less time then i predicted because the object that i 3D printed was so small and thus it took very little time to print. Along with that, I had already decided  which program to use for the 3D scan. Otherwise, the project went very well and there were no major problems like in the previous project :).</p>
+                                    <p>The project took a lot less time than I predicted because the object that I 3D printed was so small and thus it took very little time to print. Along with that, I had already decided which program to use for the 3D scan. Otherwise, the project went very well and there were no major problems like in the previous project :).</p>
 								</div>
 							</section>
 
@@ -127,7 +127,7 @@
 											<span class="opener">Tölvustudd Framleiðsla - Vél608G</span>
 											<ul>
 												<li><a href="Vel608G-Project1.html">Project 1 - The Website</a></li>
-												<li><a href="Vel608G-Project2.html">Project 2 - Lazercutting</a></li>
+												<li><a href="Vel608G-Project2.html">Project 2 - Lasercutting</a></li>
 												<li><a href="Vel608G-Project3.html">Project 3 - 3D-printing and 3D-scan</a></li>
 												<li><a href="Vel608G-FinalProject.html">Final Project</a></li>
 											</ul>
