--- a/VEl205M - Arduino.html
+++ b/VEl205M - Arduino.html
@@ -91,7 +91,7 @@
 											<span class="opener">Tölvustudd Framleiðsla - Vél608G</span>
 											<ul>
 												<li><a href="Vel608G-Project1.html">Project 1 - The Website</a></li>
-												<li><a href="Vel608G-Project2.html">Project 2 - Lazercutting</a></li>
+												<li><a href="Vel608G-Project2.html">Project 2 - Lasercutting</a></li>
 												<li><a href="Vel608G-Project3.html">Project 3 - 3D-printing and 3D-scan</a></li>
 												<li><a href="Vel608G-FinalProject.html">Final Project</a></li>
 											</ul>
