--- a/TeamSpark-FEA_Upright.html
+++ b/TeamSpark-FEA_Upright.html
@@ -82,6 +82,12 @@
 												<li><a href="TeamSpark-FEA_Upright.html">FEA analysis of an Upright</a></li>
 											</ul>
 										</li>
+                                        <li>
+											<span class="opener">Hefring Marine</span>
+											<ul>
+												<li><a href="HefringMarine_WBV.html">Whole-body Vibrations</a></li>
+											</ul>
+										</li>
 										<li><a href="CV.html">CV</a></li>
 									</ul>
 								</nav>
