--- a/HefringMarine_WBV.html
+++ b/HefringMarine_WBV.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>Generic - Editorial by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,21 +27,21 @@
 									</ul>
 								</header>
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h2>Hi my name is Jónas Þór Gunnarsson and welcome to my Portfolio</h2>
-										</header>
-										<p>I have a bachelor's Degree in Mechanical Engineering from the University of Iceland. During my studies, I participated in the Formula Student team, Team Spark. This website is intended as a personal portfolio.</p>
-										<ul class="actions">
-											<li><a href="CV.html" class="button big">CV</a></li>
-										</ul>
-									</div>
-									<span class="image object">
-										<img src="images/Drifkerfi.jpg" alt="" />
-									</span>
+							<!-- Content -->
+								<section>
+									<header class="main">
+										<h1>Whole-body Vibrations</h1>
+									</header>
+
+                                    <object data="HefringMarine_skyrsla.pdf" width="100%" height="500px">
+                                    <p> </p>
+                                    <p> </p>
+                                    <p> </p>
+
 								</section>
+
+						</div>
+					</div>
 
 				<!-- Sidebar -->
 					<div id="sidebar">
@@ -54,6 +54,7 @@
 									</form>
 								</section>
 
+							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
@@ -94,17 +95,41 @@
 									</ul>
 								</nav>
 
-
+							<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Ante interdum</h2>
+									</header>
+									<div class="mini-posts">
+										<article>
+											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+										</article>
+									</div>
+									<ul class="actions">
+										<li><a href="#" class="button">More</a></li>
+									</ul>
+								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>You can contact me via email or by phone</p>
+									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="jthgunnarsson@gmail.com">jthgunnarsson@gmail.com</a></li>
-										<li class="icon solid fa-phone">(+354) 841-8086</li>
+										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+										<li class="icon solid fa-phone">(000) 000-0000</li>
+										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
+										Nashville, TN 00000-0000</li>
 									</ul>
 								</section>
 
@@ -124,3 +149,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
